--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 absl-py==2.0.0
 amqp==5.1.1
+appdirs==1.4.4
 asgiref==3.7.2
 astunparse==1.6.3
 async-timeout==4.0.3
@@ -28,13 +29,16 @@ Django==4.1.11
 django-celery-beat==2.4.0
 django-celery-results==2.4.0
 django-timezone-field==6.0.1
+ffmpeg-python==0.2.0
 flatbuffers==23.5.26
 fonttools==4.42.1
+future==0.18.3
 gast==0.4.0
 google-auth==2.23.0
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
 grpcio==1.58.0
+h11==0.14.0
 h5py==3.9.0
 hyperlink==21.0.0
 idna==3.4
@@ -44,7 +48,9 @@ Keras-Preprocessing==1.1.2
 kiwisolver==1.4.5
 kombu==5.3.2
 libclang==16.0.6
+llvmlite==0.41.1
 mailjet-rest==1.3.4
+Mako==1.2.4
 Markdown==3.4.4
 MarkupSafe==2.1.3
 matplotlib==3.8.0
@@ -54,6 +60,7 @@ opencv-python==4.8.0.76
 opt-einsum==3.3.0
 packaging==23.1
 Pillow==10.0.1
+platformdirs==3.11.0
 prompt-toolkit==3.0.39
 protobuf==3.19.6
 pyasn1==0.5.0
@@ -64,6 +71,7 @@ pyparsing==3.1.1
 python-crontab==3.0.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
+pytools==2023.1.1
 pytz==2023.3.post1
 redis==4.5.0
 requests==2.31.0
